# Affiliates

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/structures/: affiliate.rs
src/utility/: constants.rs
