[package]
name = "soulobby-affiliates"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
regex = "1.10.5"
serenity = { version = "0.12.2", features = ["http", "model", "utils"]}
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "tls-native-tls"]}
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
